# bddriver-api

./: .bddriver-messaging.json.example  .flake8  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  setup.py
bddriver/: __init__.py  cli.py  client.py  hooks.py
bddriver/_vendor/: __init__.py
bddriver/_vendor/baidu-netdisk-sdk/: README.md
bddriver/_vendor/baidu-netdisk-sdk/openapi_client/: __init__.py  api_client.py  configuration.py  exceptions.py  model_utils.py  rest.py
bddriver/_vendor/baidu-netdisk-sdk/openapi_client/api/: auth_api.py  fileinfo_api.py  filemanager_api.py  fileupload_api.py  multimediafile_api.py  userinfo_api.py
bddriver/_vendor/baidu-netdisk-sdk/openapi_client/model/: oauth_token_authorization_code_response.py  oauth_token_device_code_response.py  oauth_token_device_token_response.py  oauth_token_refresh_token_response.py  quotaresponse.py  uinforesponse.py
bddriver/_vendor/baidu_netdisk_sdk/: __init__.py
bddriver/auth/: __init__.py  manager.py  oauth.py
bddriver/config/: __init__.py  builtin.py  constants.py
bddriver/fileops/: __init__.py  client.py  manager.py
bddriver/messaging/: __init__.py  base.py  dingtalk_provider.py  email_provider.py  future_providers.py  manager.py  providers.py  registry.py  wechat_work_provider.py  wxpusher.py  wxpusher_provider.py
bddriver/messaging/wxpusher/: __init__.py  client.py
bddriver/utils/: __init__.py  errors.py  logger.py
bddriver/wxpusher/: __init__.py  client.py  templates.py
examples/: README.md  abstraction_demo.py  async_hooks_demo.py  auth.py  basic_usage.py  cli_demo.py  context_manager.py  device_auth.py  file_operations.py  fileinfo.py  filemanager.py  hooks_demo.py  hooks_simple_demo.py  messaging_demo.py  multi_provider_demo.py  multimedia_file.py  payment_hook_real.py  subscription_demo.py  upload.py  userinfo.py
scripts/: check-status.sh  setup-dev.sh
tests/: __init__.py  conftest.py  test_auth.py  test_cli.py  test_client.py  test_config.py  test_utils.py  test_wxpusher.py
